# CS593SER_Project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  panda_gz_moveit2.repos
labs/: LAB01.md  LAB02.md
panda/: CMakeLists.txt  README.md  package.xml
panda_description/: CMakeLists.txt  README.md  package.xml
panda_description/chess_piece_black/: model.config  model.sdf
panda_description/chess_piece_white/: model.config  model.sdf
panda_description/chessboard/: chessboard.sdf  model.config
panda_description/config/: initial_joint_positions.yaml
panda_description/launch/: view.launch.py  view_gz.launch.py
panda_description/panda/: model.config  model.sdf
panda_description/rviz/: view.rviz
panda_description/scripts/: estimate_inertial_properties.py
panda_moveit_config/: CMakeLists.txt  README.md  package.xml
panda_moveit_config/config/: controllers_effort.yaml  controllers_position,velocity.yaml  controllers_position.yaml  controllers_velocity.yaml  gz_bridge.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  ompl_planning.yaml  servo.yaml
panda_moveit_config/launch/: ex_fake_control.launch.py  ex_gz_chess_control.launch.py  ex_gz_control.launch.py  move_group.launch.py
panda_moveit_config/rviz/: moveit.rviz
panda_moveit_config/scripts/: grasp_planner.py  grasp_planner_answer.py  grasp_planner_gpd.py  move_object.py  object_detector.py  object_detector_answer.py  scene_publisher.py
panda_moveit_config/srdf/: panda.srdf  panda.srdf.xacro  panda_arm.xacro  panda_gripper.xacro
(+11 files in other folders)
